# snickerdoodle

./: README.md  cookiecutter.json
{{cookiecutter.repo_name}}/: .gitignore  .pre-commit-config.yaml  README.md  config.yaml  pyproject.toml
{{cookiecutter.repo_name}}/.devcontainer/: Dockerfile  devcontainer.json
{{cookiecutter.repo_name}}/{{cookiecutter.app_name}}/: __main__.py
{{cookiecutter.repo_name}}/{{cookiecutter.app_name}}/lib/: .template.py
{{cookiecutter.repo_name}}/{{cookiecutter.app_name}}/utils/: display.py  helpers.py  req.py  setup.py
