[tool.poetry]
name = "{{cookiecutter.app_name}}"
version = "{{cookiecutter.version}}"
description = ""
authors = ["{{cookiecutter.author}} <{{cookiecutter.email}}>"]
readme = "README.md"
homepage = "https://github.com/{{cookiecutter.github_user}}/{{cookiecutter.repo_name}}"
repository = "https://github.com/{{cookiecutter.github_user}}/{{cookiecutter.repo_name}}"
exclude = ["tests"]
include = ["LICENSE", "CHANGELOG.md"]
license = "Unlicense"
classifiers = [
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]

packages = [{ include = "{{cookiecutter.app_name}}" }]

[tool.poetry.scripts]
{{cookiecutter.app_name}} = '{{cookiecutter.app_name}}.__main__:main'
{% if cookiecutter.app_short_name != "" %}
{{cookiecutter.app_short_name}} = '{{cookiecutter.app_name}}.__main__:main'
{% endif %}

[tool.poetry.dependencies]
python = "^{{cookiecutter.python_version}}"
click = "*"
click-extra="*"
rich = "*"
validators = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
flake8 = "*"
black = "*"
pre-commit = "*"
isort = "*"
scriv = "*"

[tool.black]
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | venv
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | pyproject\.toml
)/
'''

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
